--- a/Neocom.WebUI/package.json
+++ b/Neocom.WebUI/package.json
@@ -40,7 +40,10 @@
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.5.2",
     "protractor": "~5.1.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.5",
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
     "typescript": "^2.3.2"
