--- a/Neocom.WebUI/package.json
+++ b/Neocom.WebUI/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^4.1.2",
     "@angular/router": "^4.1.2",
     "core-js": "^2.4.1",
+    "ngx-cookie": "^1.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.10"
   },
