--- a/Neocom.MicroServices/pom.xml
+++ b/Neocom.MicroServices/pom.xml
@@ -21,22 +21,23 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<eveapi.version>6.0.6</eveapi.version>
 	</properties>
 
 	<dependencies>
-<!-- 		<dependency> -->
-<!-- 			<groupId>DimensinfinIndustries</groupId> -->
-<!-- 			<artifactId>CoreBase.core</artifactId> -->
-<!-- 			<version>1.1.3</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${project.basedir}/privatelibraries/CoreBase.core-1.1.3.jar</systemPath> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>DimensinfinIndustries</groupId> -->
+		<!-- <artifactId>CoreBase.core</artifactId> -->
+		<!-- <version>1.1.3</version> -->
+		<!-- <scope>system</scope> -->
+		<!-- <systemPath>${project.basedir}/privatelibraries/CoreBase.core-1.1.3.jar</systemPath> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>DimensinfinIndustries</groupId>
 			<artifactId>EveDevelopments.evemarket</artifactId>
 			<version>1.0.0</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibraries/EveDevelopments.evemarket.1.0.0.jar</systemPath>
+			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath>
 		</dependency>
 
 		<dependency>
@@ -65,21 +66,26 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.8.2</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.htmlparser</groupId> -->
-<!-- 			<artifactId>htmlparser</artifactId> -->
-<!-- 			<version>2.1</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.htmlparser</groupId> -->
+		<!-- <artifactId>htmlparser</artifactId> -->
+		<!-- <version>2.1</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>javax.inject</groupId> -->
-<!-- 			<artifactId>javax.inject</artifactId> -->
-<!-- 			<version>1</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>com.beimin</groupId>
+			<artifactId>eveapi</artifactId>
+			<version>${eveapi.version}</version>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>javax.inject</groupId> -->
+		<!-- <artifactId>javax.inject</artifactId> -->
+		<!-- <version>1</version> -->
+		<!-- </dependency> -->
 	</dependencies>
 
 	<build>
