-[PROJECT] Added to the web project the database specific code.
Former-commit-id: f870979b39baf6972016556ff48c3df4456d8e27

--- a/Neocom.MicroServices/.classpath
+++ b/Neocom.MicroServices/.classpath
@@ -23,7 +23,6 @@
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/Neocom.Models"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.dimensinfin.core"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Neocom.Database"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Neocom.MarketService"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
@@ -31,5 +30,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/Neocom.WebDatabase"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
