--- a/Neocom.WebDatabase/pom.xml
+++ b/Neocom.WebDatabase/pom.xml
@@ -12,6 +12,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<eveapi.version>6.0.6</eveapi.version>
+		<ormlite.version>4.48</ormlite.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -23,7 +24,7 @@
 		<dependency>
 			<groupId>com.j256.ormlite</groupId>
 			<artifactId>ormlite-jdbc</artifactId>
-			<version>4.48</version>
+			<version>${ormlite.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
