--- a/Neocom.MicroServices/pom.xml
+++ b/Neocom.MicroServices/pom.xml
@@ -26,21 +26,21 @@
 	</properties>
 
 	<dependencies>
-		<!-- L O C A L   L I B R A R I E S   D E P E N D E N C I E S -->
-		<!-- <dependency> -->
-		<!-- <groupId>DimensinfinIndustries</groupId> -->
-		<!-- <artifactId>CoreBase.core</artifactId> -->
-		<!-- <version>1.1.3</version> -->
-		<!-- <scope>system</scope> -->
-		<!-- <systemPath>${project.basedir}/privatelibraries/CoreBase.core-1.1.3.jar</systemPath> -->
-		<!-- </dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>DimensinfinIndustries</groupId> -->
-<!-- 			<artifactId>EveDevelopments.evemarket</artifactId> -->
-<!-- 			<version>1.0.0</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath> -->
-<!-- 		</dependency> -->
+		<!-- L O C A L L I B R A R I E S D E P E N D E N C I E S -->
+		<dependency>
+			<groupId>DimensinfinIndustries</groupId>
+			<artifactId>CoreBase.core</artifactId>
+			<version>1.1.3</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/privatelibs/CoreBase.core-1.1.3.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>DimensinfinIndustries</groupId>
+			<artifactId>EveDevelopments.evemarket</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath>
+		</dependency>
 
 		<!-- S P R I N G B O O T -->
 		<dependency>
@@ -79,18 +79,18 @@
 			<artifactId>eveapi</artifactId>
 			<version>${eveapi.version}</version>
 		</dependency>
-		<!-- D E P E N D E N C I E S   F R O M   O T H E R   P A C K A G E S -->
+		<!-- D E P E N D E N C I E S F R O M O T H E R P A C K A G E S -->
 		<dependency>
 			<groupId>org.htmlparser</groupId>
 			<artifactId>htmlparser</artifactId>
 			<version>2.1</version>
 		</dependency>
-		
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.google.code.gson</groupId> -->
-<!-- 			<artifactId>gson</artifactId> -->
-<!-- 			<version>2.3.1</version> -->
-<!-- 		</dependency> -->
+
+		<!-- <dependency> -->
+		<!-- <groupId>com.google.code.gson</groupId> -->
+		<!-- <artifactId>gson</artifactId> -->
+		<!-- <version>2.3.1</version> -->
+		<!-- </dependency> -->
 		<!-- <dependency> -->
 		<!-- <groupId>javax.inject</groupId> -->
 		<!-- <artifactId>javax.inject</artifactId> -->
