--- a/Neocom.WebUI/tsconfig.json
+++ b/Neocom.WebUI/tsconfig.json
@@ -2,6 +2,10 @@
   "compileOnSave": true,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
+    "baseUrl": "./",
+    "paths" : {
+      "src/*": ["./src/*"]
+    },
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
