--- a/Neocom.MicroServices/pom.xml
+++ b/Neocom.MicroServices/pom.xml
@@ -34,13 +34,13 @@
 		<!-- <scope>system</scope> -->
 		<!-- <systemPath>${project.basedir}/privatelibraries/CoreBase.core-1.1.3.jar</systemPath> -->
 		<!-- </dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>DimensinfinIndustries</groupId> -->
-<!-- 			<artifactId>EveDevelopments.evemarket</artifactId> -->
-<!-- 			<version>1.0.0</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>DimensinfinIndustries</groupId>
+			<artifactId>EveDevelopments.evemarket</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath>
+		</dependency>
 
 		<!-- S P R I N G B O O T -->
 		<dependency>
