--- a/Neocom.MicroServices/pom.xml
+++ b/Neocom.MicroServices/pom.xml
@@ -26,14 +26,14 @@
 	</properties>
 
 	<dependencies>
-		<!-- L O C A L L I B R A R I E S D E P E N D E N C I E S -->
-		<!-- <dependency> -->
-		<!-- <groupId>DimensinfinIndustries</groupId> -->
-		<!-- <artifactId>CoreBase.core</artifactId> -->
-		<!-- <version>1.1.3</version> -->
-		<!-- <scope>system</scope> -->
-		<!-- <systemPath>${project.basedir}/privatelibraries/CoreBase.core-1.1.3.jar</systemPath> -->
-		<!-- </dependency> -->
+		<!-- L O C A L    L I B R A R I E S    D E P E N D E N C I E S -->
+		<dependency>
+			<groupId>DimensinfinIndustries</groupId>
+			<artifactId>CoreBase.core</artifactId>
+			<version>1.4.1</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/privatelibs/CoreBase.core-1.4.1.jar</systemPath>
+		</dependency>
 		<dependency>
 			<groupId>DimensinfinIndustries</groupId>
 			<artifactId>EveDevelopments.evemarket</artifactId>
@@ -43,10 +43,10 @@
 		</dependency>
 
 		<!-- S P R I N G B O O T -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework.boot</groupId> -->
-<!-- 			<artifactId>spring-boot-starter-cache</artifactId> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework.boot</groupId> -->
+		<!-- <artifactId>spring-boot-starter-cache</artifactId> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
