--- a/Neocom.MicroServices/src/main/java/org/dimensinfin/eveonline/neocom/constant/R.properties
+++ b/Neocom.MicroServices/src/main/java/org/dimensinfin/eveonline/neocom/constant/R.properties
@@ -1,3 +1,3 @@
-R.string.appdatabasepath=jdbc:sqlite:src/main/resources/
-R.string.appdatabasefilename=neocomdata.db
+R.string.appdatabasepath=jdbc:hsqldb:hsql://localhost:9001/
+R.string.appdatabasefilename=neocomdata
 R.string.databaseversion=010
