-[WIP] New service has many dependencies. Trimming down code to reduce to CCP Database dependency only.
Former-commit-id: 15190fcc1a2ede7b856bf15c549b5bc5b9b4294e

--- a/Neocom.MarketDataService/.classpath
+++ b/Neocom.MarketDataService/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="org/dimensinfin/eveonline/neocom/database/HyperSQLDBServer.java" kind="src" output="target/classes" path="src/main/java">
+	<classpathentry excluding="org/dimensinfin/eveonline/neocom/database/HyperSQLDBServer.java|org/dimensinfin/eveonline/neocom/services/MarketDataService222.java" kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -21,12 +21,12 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/Neocom.Models"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/Neocom.Models"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
