--- a/Neocom.MarketDataService/pom.xml
+++ b/Neocom.MarketDataService/pom.xml
@@ -58,13 +58,13 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath>
 		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.3.3</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/hsqldb.jar</systemPath>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hsqldb</groupId> -->
+<!-- 			<artifactId>hsqldb</artifactId> -->
+<!-- 			<version>2.3.3</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/hsqldb.jar</systemPath> -->
+<!-- 		</dependency> -->
 
 		<!-- S P R I N G B O O T -->
 		<dependency>
@@ -95,16 +95,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>io.dropwizard.metrics</groupId> -->
-		<!-- <artifactId>metrics-graphite</artifactId> -->
-		<!-- <version>${metrics.version}</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>com.netflix.servo</groupId> -->
-		<!-- <artifactId>servo-graphite</artifactId> -->
-		<!-- <version>0.4.34</version> -->
-		<!-- </dependency> -->
 
 		<!-- A D D I T I O N A L ... L I B R A R I E S -->
 		<dependency>
