--- a/Neocom.MarketDataService/pom.xml
+++ b/Neocom.MarketDataService/pom.xml
@@ -51,13 +51,13 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/privatelibs/CoreBase.core-1.4.1.jar</systemPath>
 		</dependency>
-		<dependency>
-			<groupId>DimensinfinIndustries</groupId>
-			<artifactId>EveDevelopments.evemarket</artifactId>
-			<version>1.0.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>DimensinfinIndustries</groupId> -->
+<!-- 			<artifactId>EveDevelopments.evemarket</artifactId> -->
+<!-- 			<version>1.0.0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath> -->
+<!-- 		</dependency> -->
 		<!-- <dependency> -->
 		<!-- <groupId>org.hsqldb</groupId> -->
 		<!-- <artifactId>hsqldb</artifactId> -->
@@ -123,6 +123,11 @@
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>3.16.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
 		</dependency>
 
 		<!-- D E P E N D E N C I E S ... F R O M ... O T H E R ... P A C K A G 
