--- a/Neocom.MicroServices/pom.xml
+++ b/Neocom.MicroServices/pom.xml
@@ -82,6 +82,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
 
 		<!-- A D D I T I O N A L ... L I B R A R I E S -->
 		<dependency>
@@ -94,11 +98,11 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.8.0</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.xerial</groupId> -->
-		<!-- <artifactId>sqlite-jdbc</artifactId> -->
-		<!-- <version>3.16.1</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.16.1</version>
+		</dependency>
 		<dependency>
 			<groupId>com.beimin</groupId>
 			<artifactId>eveapi</artifactId>
@@ -115,14 +119,15 @@
 			<artifactId>ormlite-jdbc</artifactId>
 			<version>${ormlite.version}</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.hsqldb</groupId> -->
-<!-- 			<artifactId>hsqldb</artifactId> -->
-<!-- 			<version>2.4.0</version> -->
-<!-- 			<scope>test</scope> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.hsqldb</groupId> -->
+		<!-- <artifactId>hsqldb</artifactId> -->
+		<!-- <version>2.4.0</version> -->
+		<!-- <scope>test</scope> -->
+		<!-- </dependency> -->
 
-		<!-- D E P E N D E N C I E S ... F R O M ... O T H E R ... P A C K A G E S -->
+		<!-- D E P E N D E N C I E S ... F R O M ... O T H E R ... P A C K A G 
+			E S -->
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
