--- a/Neocom.MarketDataService/pom.xml
+++ b/Neocom.MarketDataService/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.5.RELEASE</version>
+		<version>1.5.6.RELEASE</version>
 		<relativePath />
 	</parent>
 
@@ -23,7 +23,6 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<springframework.cloud.version>Brixton.RELEASE</springframework.cloud.version>
 		<metrics.version>3.1.2</metrics.version>
-		<dropwizard-metrics-influxdb.version>0.3.0</dropwizard-metrics-influxdb.version>
 		<springframework.boot.version>1.3.5.RELEASE</springframework.boot.version>
 		<spring.boot.admin.version>1.3.3</spring.boot.admin.version>
 		<eveapi.version>6.0.6</eveapi.version>
@@ -58,13 +57,13 @@
 <!-- 			<scope>system</scope> -->
 <!-- 			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath> -->
 <!-- 		</dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.hsqldb</groupId> -->
-		<!-- <artifactId>hsqldb</artifactId> -->
-		<!-- <version>2.3.3</version> -->
-		<!-- <scope>system</scope> -->
-		<!-- <systemPath>${project.basedir}/privatelibs/hsqldb.jar</systemPath> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.4.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/privatelibs/hsqldb.jar</systemPath>
+		</dependency>
 
 		<!-- S P R I N G B O O T -->
 		<dependency>
@@ -83,17 +82,9 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
 		</dependency>
-
 		<dependency>
-			<groupId>com.netflix.hystrix</groupId>
-			<artifactId>hystrix-codahale-metrics-publisher</artifactId>
-			<version>1.4.10</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.codahale.metrics</groupId>
-					<artifactId>metrics-core</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
 
 		<!-- A D D I T I O N A L ... L I B R A R I E S -->
@@ -108,10 +99,19 @@
 			<version>2.8.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.16.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.beimin</groupId>
 			<artifactId>eveapi</artifactId>
 			<version>${eveapi.version}</version>
 		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>net.sf.ehcache</groupId> -->
+		<!-- <artifactId>ehcache</artifactId> -->
+		<!-- </dependency> -->
 
 		<!-- D A T A B A S E S -->
 		<dependency>
@@ -119,16 +119,12 @@
 			<artifactId>ormlite-jdbc</artifactId>
 			<version>${ormlite.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.16.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.3.1</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.hsqldb</groupId> -->
+		<!-- <artifactId>hsqldb</artifactId> -->
+		<!-- <version>2.4.0</version> -->
+		<!-- <scope>test</scope> -->
+		<!-- </dependency> -->
 
 		<!-- D E P E N D E N C I E S ... F R O M ... O T H E R ... P A C K A G 
 			E S -->
@@ -145,27 +141,10 @@
 	</dependencies>
 
 	<build>
-		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
 			<plugin>
-				<!-- Build an executable JAR -->
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>org.dimensinfin.eveonline.neocom.MarketDataServiceApplication</mainClass>
-						</manifest>
-					</archive>
-					<delimiters>
-						<delimiter>@</delimiter>
-					</delimiters>
-					<useDefaultDelimiters>false</useDefaultDelimiters>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
