-Removing the HSQLDB database. Uses only a memory server and has problems with the deletion of records. -Removing also the header interceptor on the remote Service call.
Former-commit-id: a67ea138d3257c56d1815c5a3177cd68a2aa5bff

--- a/Neocom.MicroServices/src/main/java/org/dimensinfin/eveonline/neocom/constant/R.properties
+++ b/Neocom.MicroServices/src/main/java/org/dimensinfin/eveonline/neocom/constant/R.properties
@@ -1,3 +1,3 @@
-R.string.appdatabasepath=jdbc:hsqldb:hsql://localhost:9001/
-R.string.appdatabasefilename=neocomdata
-R.string.databaseversion=010
+R.string.appdatabasepath=jdbc:sqlite:src/main/resources/
+R.string.appdatabasefilename=neocomdata.db
+R.string.databaseversion=020
