--- a/Neocom.MicroServices/.classpath
+++ b/Neocom.MicroServices/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="org/dimensinfin/eveonline/neocom/database/HyperSQLDBServer.java" kind="src" output="target/classes" path="src/main/java">
+	<classpathentry excluding="org/dimensinfin/eveonline/neocom/database/HyperSQLDBServer.java|org/dimensinfin/eveonline/neocom/services/XUserAgentInterceptor.java" kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
