--- a/Neocom.MicroServices/pom.xml
+++ b/Neocom.MicroServices/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.6.RELEASE</version>
+		<version>1.3.5.RELEASE</version>
 		<relativePath />
 	</parent>
 
@@ -57,13 +57,13 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath>
 		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.4.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/hsqldb.jar</systemPath>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hsqldb</groupId> -->
+<!-- 			<artifactId>hsqldb</artifactId> -->
+<!-- 			<version>2.4.0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/hsqldb.jar</systemPath> -->
+<!-- 		</dependency> -->
 
 		<!-- S P R I N G B O O T -->
 		<dependency>
@@ -99,11 +99,6 @@
 			<version>2.8.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.16.1</version>
-		</dependency>
-		<dependency>
 			<groupId>com.beimin</groupId>
 			<artifactId>eveapi</artifactId>
 			<version>${eveapi.version}</version>
@@ -119,15 +114,13 @@
 			<artifactId>ormlite-jdbc</artifactId>
 			<version>${ormlite.version}</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.hsqldb</groupId> -->
-		<!-- <artifactId>hsqldb</artifactId> -->
-		<!-- <version>2.4.0</version> -->
-		<!-- <scope>test</scope> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.16.1</version>
+		</dependency>
 
-		<!-- D E P E N D E N C I E S ... F R O M ... O T H E R ... P A C K A G 
-			E S -->
+		<!-- D E P E N D E N C I E S ... F R O M ... O T H E R ... P A C K S -->
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
@@ -138,13 +131,35 @@
 			<artifactId>htmlparser</artifactId>
 			<version>2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.beimin</groupId>
+			<artifactId>eveapi</artifactId>
+			<version>${eveapi.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
 			<plugin>
+				<!-- Build an executable JAR -->
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<delimiters>
+						<delimiter>@</delimiter>
+					</delimiters>
+					<useDefaultDelimiters>false</useDefaultDelimiters>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>org.dimensinfin.eveonline.neocom.NeocomMicroServiceApplication</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
