--- a/Neocom.MarketDataService/pom.xml
+++ b/Neocom.MarketDataService/pom.xml
@@ -66,10 +66,10 @@
 		</dependency>
 		<dependency>
 			<groupId>DimensinfinIndustries</groupId>
-			<artifactId>NeoCom.model</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<artifactId>NeoCom.Models</artifactId>
+			<version>1.1.0</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/NeoCom.model-0.2.0-SNAPSHOT.jar</systemPath>
+			<systemPath>${project.basedir}/privatelibs/NeoCom.Models-1.1.0.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>GoldeGnu</groupId>
