--- a/Neocom.MarketDataService/src/main/resources/application.properties
+++ b/Neocom.MarketDataService/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=9002
 spring.cache.ehcache.config=classpath:ehcache.xml
+ndpoints.enabled=true
+endpoints.sensitive=false
+endpoints.shutdown.enabled=true
+endpoints.shutdown.sensitive=false
