--- a/Neocom.MarketDataService/pom.xml
+++ b/Neocom.MarketDataService/pom.xml
@@ -64,13 +64,13 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/privatelibs/hsqldb-2.4.0.jar</systemPath>
 		</dependency>
-		<dependency>
-			<groupId>DimensinfinIndustries</groupId>
-			<artifactId>NeoCom.Models</artifactId>
-			<version>1.1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/NeoCom.Models-1.1.0.jar</systemPath>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>DimensinfinIndustries</groupId> -->
+<!-- 			<artifactId>NeoCom.Models</artifactId> -->
+<!-- 			<version>1.1.0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/NeoCom.Models-1.1.0.jar</systemPath> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>GoldeGnu</groupId>
 			<artifactId>jeveassets</artifactId>
