--- a/Neocom.MicroServices/pom.xml
+++ b/Neocom.MicroServices/pom.xml
@@ -57,6 +57,13 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath>
 		</dependency>
+		<dependency>
+			<groupId>GoldeGnu</groupId>
+			<artifactId>jeveassets</artifactId>
+			<version>3.1.2</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/privatelibs/jeveassets.3.1.2.jar</systemPath>
+		</dependency>
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.hsqldb</groupId> -->
 <!-- 			<artifactId>hsqldb</artifactId> -->
