--- a/Neocom.MarketDataService/pom.xml
+++ b/Neocom.MarketDataService/pom.xml
@@ -46,17 +46,10 @@
 		<dependency>
 			<groupId>DimensinfinIndustries</groupId>
 			<artifactId>CoreBase.core</artifactId>
-			<version>1.4.2</version>
+			<version>1.5.0</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/CoreBase.core-1.4.2.jar</systemPath>
+			<systemPath>${project.basedir}/privatelibs/CoreBase.core-1.5.0.jar</systemPath>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>DimensinfinIndustries</groupId> -->
-		<!-- <artifactId>EveDevelopments.evemarket</artifactId> -->
-		<!-- <version>1.0.0</version> -->
-		<!-- <scope>system</scope> -->
-		<!-- <systemPath>${project.basedir}/privatelibs/EveDevelopments.evemarket.1.0.0.jar</systemPath> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
@@ -64,13 +57,13 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/privatelibs/hsqldb-2.4.0.jar</systemPath>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>DimensinfinIndustries</groupId> -->
-<!-- 			<artifactId>NeoCom.Models</artifactId> -->
-<!-- 			<version>1.1.0</version> -->
-<!-- 			<scope>system</scope> -->
-<!-- 			<systemPath>${project.basedir}/privatelibs/NeoCom.Models-1.1.0.jar</systemPath> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>DimensinfinIndustries</groupId>
+			<artifactId>NeoCom.Models</artifactId>
+			<version>1.3.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/privatelibs/NeoCom.Models-1.3.0.jar</systemPath>
+		</dependency>
 		<dependency>
 			<groupId>GoldeGnu</groupId>
 			<artifactId>jeveassets</artifactId>
