--- a/Neocom.MarketDataService/.classpath
+++ b/Neocom.MarketDataService/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="org/dimensinfin/eveonline/neocom/commands/CommandDownloadMarketData.java|org/dimensinfin/eveonline/neocom/connector/CCPDatabaseConnector.java" kind="src" output="target/classes" path="src/main/java">
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/Neocom.Models"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
