--- a/Neocom.MarketDataService/pom.xml
+++ b/Neocom.MarketDataService/pom.xml
@@ -44,26 +44,30 @@
 	<dependencies>
 		<!-- L O C A L ... L I B R A R I E S ... D E P E N D E N C I E S -->
 		<dependency>
-			<groupId>DimensinfinIndustries</groupId>
-			<artifactId>CoreBase.core</artifactId>
-			<version>1.5.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/CoreBase.core-1.5.0.jar</systemPath>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.4.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/hsqldb-2.4.0.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>DimensinfinIndustries</groupId>
-			<artifactId>NeoCom.Models</artifactId>
-			<version>1.3.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/privatelibs/NeoCom.Models-1.3.0.jar</systemPath>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>DimensinfinIndustries</groupId> -->
+<!-- 			<artifactId>CoreBase.core</artifactId> -->
+<!-- 			<version>1.5.0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/CoreBase.core-1.5.0.jar</systemPath> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hsqldb</groupId> -->
+<!-- 			<artifactId>hsqldb</artifactId> -->
+<!-- 			<version>2.4.0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/hsqldb-2.4.0.jar</systemPath> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>DimensinfinIndustries</groupId> -->
+<!-- 			<artifactId>NeoCom.Models</artifactId> -->
+<!-- 			<version>1.3.0</version> -->
+<!-- 			<scope>system</scope> -->
+<!-- 			<systemPath>${project.basedir}/privatelibs/NeoCom.Models-1.3.0.jar</systemPath> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>GoldeGnu</groupId>
 			<artifactId>jeveassets</artifactId>
@@ -73,33 +77,32 @@
 		</dependency>
 
 		<!-- S P R I N G B O O T -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot-starter-actuator</artifactId> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-hystrix</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-cache</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.cloud</groupId> -->
+<!-- 			<artifactId>spring-cloud-starter-eureka</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.cloud</groupId> -->
+<!-- 			<artifactId>spring-cloud-starter-hystrix</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot-starter-cache</artifactId> -->
+<!-- 		</dependency> -->
 
 		<!-- A D D I T I O N A L ... L I B R A R I E S -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<!-- <version>1.7.21</version> -->
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.slf4j</groupId> -->
+<!-- 			<artifactId>slf4j-api</artifactId> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
