-Converted the Controller call to an hystrix command.
Former-commit-id: c716520f754f86146fc4d9b248dbfea57c40918e

--- a/Neocom.MarketDataService/src/main/resources/application.properties
+++ b/Neocom.MarketDataService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9002
 spring.cache.ehcache.config=classpath:ehcache.xml
-ndpoints.enabled=true
+endpoints.enabled=true
 endpoints.sensitive=false
 endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
