-Minor style corrections. -[BUG] Corrected the names of the classes to the real used names. -New page data access model. Simplification of the data calls to use only the required data. -Storing the received data onto their destinations at the map reception point and not at the page. This simplifies somehow the API.
Former-commit-id: 4615861d9f04ebeb9014a0fe1a04348f565dfb6c

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Neocom.MarketDataService/MarketDataService.store
 Neocom.MicroServices/MarketDataService.store
 *.ttf
 *.otf
+Documentation/~$emiminaryNotes.odt
