-[WS] Updated new database names and authentication. -[WS] Added Idea configuration to project. -[WS] Validated the refresh tokens for initialization. -[WEB] Removal for 60% sizing. New layout for the first page. -[WEB] Initialized the ActionBar component but still empty.
Former-commit-id: a2619d27cfa29fbd26be67c46db1823de940e934

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,5 @@ Neocom.MicroServices/MarketDataService.store
 *.ttf
 *.otf
 Documentation/~$emiminaryNotes.odt
-NeoCom.MicroServices/.gradle/
-NeoCom.MicroServices/gradle/
-NeoCom.MicroServices/gradlew
-NeoCom.MicroServices/gradlew.bat
-NeoCom.MicroServices/out/
+*.sqlite
+Neocom.MicroServices/ESINetworkManager.cache.store/
