--- a/Neocom.MicroServices/.gitignore
+++ b/Neocom.MicroServices/.gitignore
@@ -7,7 +7,7 @@ target/
 .springBeans
 
 ### IntelliJ IDEA ###
-.idea
+#.idea
 *.iws
 *.iml
 *.ipr
@@ -22,3 +22,10 @@ nbdist/
 
 /classes/
 /target/
+
+/.gradle/
+/gradle/
+/gradlew
+/gradlew.bat
+/out/
+/.idea/libraries/
