-[BUG][WEB] The new connection to the main list generates an infinite loop on the update of the UI. Cut this off.
Former-commit-id: 3dddebf48a1bbb8f761a307aff12e0f01bb2ce30

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Neocom.MicroServices/MarketDataService.store
 Documentation/~$emiminaryNotes.odt
 *.sqlite
 Neocom.MicroServices/ESINetworkManager.cache.store/
+Neocom.MicroServices/.idea/workspace.xml
