-Starting to replace hardcoded constants by configuration properties. -Added fitting access. -[BUG] Codification error that did not assigned the prepStmt variable. -Created more test code. Starting to move Data Management code to the SB project to remove more database requirements on other modules.
Former-commit-id: e25d9d1627ffea315af55452e75bc94429f810f8

--- a/Neocom.MicroServices/src/test/resources/properties/databasedefinition.properties
+++ b/Neocom.MicroServices/src/test/resources/properties/databasedefinition.properties
@@ -4,5 +4,5 @@ R.database.neocom.databaseuser=NEOCOM
 R.database.neocom.databasepassword=01.Alpha
 R.database.neocom.databaseversion=109
 R.database.sdedatabase.databaseschema=jdbc:sqlite
-R.database.sdedatabase.databasepath=src/main/resources/
-R.database.sdedatabase.databasename=sdetest.sqlite
+R.database.sdedatabase.databasepath=src/test/resources/
+R.database.sdedatabase.databasename=sdetest.db
