-Updated gradle to make it compatible with standard gradle configuration. -Removed modules that are now imported by library dependencies. -Removed unused modules. -[WIP] Started the development of the background updater. Copied Android code that can be made common to all implementations.
Former-commit-id: 2c177f3bcdd883b8d9790727eb4493c365cbbbed

--- a/Neocom.MicroServices/.gitignore
+++ b/Neocom.MicroServices/.gitignore
@@ -1,4 +1,4 @@
-target/
+### MAVEN ###
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
@@ -11,6 +11,11 @@ target/
 *.iws
 *.iml
 *.ipr
+/.idea/libraries/
+/.gradle/
+/gradle/
+/build
+/out/
 
 ### NetBeans ###
 nbproject/private/
@@ -20,12 +25,6 @@ dist/
 nbdist/
 .nb-gradle/
 
+### NeoCom ###
 /classes/
 /target/
-
-/.gradle/
-/gradle/
-/gradlew
-/gradlew.bat
-/out/
-/.idea/libraries/
