--- a/Neocom.MarketDataService/.gitignore
+++ b/Neocom.MarketDataService/.gitignore
@@ -1,4 +1,4 @@
-target/
+### MAVEN ###
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
@@ -7,10 +7,15 @@ target/
 .springBeans
 
 ### IntelliJ IDEA ###
-.idea
+#.idea
 *.iws
 *.iml
 *.ipr
+/.idea/libraries/
+/.gradle/
+/gradle/
+/build
+/out/
 
 ### NetBeans ###
 nbproject/private/
@@ -20,5 +25,6 @@ dist/
 nbdist/
 .nb-gradle/
 
+### NeoCom ###
 /classes/
 /target/
