--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -1,17 +1,6 @@
 apply plugin: 'java'
 
-//buildscript {
-//    repositories {
-//        maven { url 'https://repo.spring.io/libs-snapshot' }
-//    }
-//
-//    dependencies {
-//        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.0.0.BUILD-SNAPSHOT'
-//    }
-//}
-//apply plugin: 'org.springframework.boot'
-
-group 'DimensinfinIndustries'
+group 'org.dimensinfin'
 version '0.11.0'
 archivesBaseName = 'NeoCom.MicroServices'
 
@@ -31,9 +20,9 @@ sourceSets {
 //    main.java.srcDirs += 'src/main/java-android'
 }
 
-jar {
-    enabled = true
-}
+//jar {
+//    enabled = true
+//}
 //jar {
 //    manifest {
 //        attributes("Implementation-Title": "Gradle",
@@ -53,7 +42,7 @@ task copyResources(type: Copy, dependsOn: processResources) {
 
 dependencies {
     // P R O J E C T    D E P E N D E N C I E S
-    implementation project(path: ':CoreBaseLibrary')
+//    implementation project(path: ':CoreBaseLibrary')
     implementation project(path: ':NeoCom.Model')
     implementation project(path: ':ESI.SwaggerApi')
 
@@ -61,9 +50,9 @@ dependencies {
 
     // M O D U L E    D E P E N D E N C I E S
     // S P R I N G B O O T
-    implementation 'org.springframework.boot:spring-boot-starter-actuator:1.3.5.RELEASE'
+//    implementation 'org.springframework.boot:spring-boot-starter-actuator:1.3.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:1.3.5.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-cache:1.3.5.RELEASE'
+//    implementation 'org.springframework.boot:spring-boot-starter-cache:1.3.5.RELEASE'
 
     // N E O C O M . M O D E L
     implementation 'joda-time:joda-time:2.3'
