-[BUG] Deleted the previous set of assets that belong to the character before changin the new set. -Updated the preferences. -Added more serializers to write only the information that is needed.
Former-commit-id: 960919e31af2bd2c34a8447241e660d5a642607b

--- a/Neocom.MicroServices/src/main/resources/properties/updater.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/updater.properties
@@ -8,4 +8,4 @@
 #               the source for the specific functionality for the backend services.
 #  UPDATER.PROPERTIES
 #  Defines the configuration data to allow the start of the timed updater or the execution of specific update jobs.
-R.updater.allowtimer=true
+R.updater.allowtimer=false
