-Added the model mapper to convert instances between classes. -Replaced the old Auth configuration classes by the new instances developed in Data Management so the esi authentication is read from the configurtation files. -Added the Industry Jobs mock up data to generate the front end mock data to test the application in a by hand generated environment.
Former-commit-id: 20c2cb7616158572db45263a80d97f6e03e5fdad

--- a/Neocom.MicroServices/src/main/resources/properties/cache.properties
+++ b/Neocom.MicroServices/src/main/resources/properties/cache.properties
@@ -1,1 +1,16 @@
-R.cache.directorypath=/src/main/resources/cache
+#  PROJECT:     NeoCom.DataManagement(NEOC.DTM)
+#  AUTHORS:     Adam Antinoo - adamantinoo.git@gmail.com
+#  COPYRIGHT:   (c) 2013-2018 by Dimensinfin Industries, all rights reserved.
+#  ENVIRONMENT: Java 1.8 Library.
+#  DESCRIPTION: NeoCom project library that comes from the old Models package but that includes much more
+#               functionality than the model definitions for the Eve Online NeoCom application.
+#               If now defines the pure java code for all the repositories, caches and managers that do
+#               not have an specific Android implementation serving as a code base for generic platform
+#               development. The architecture model has also changed to a better singleton/static
+#               implementation that reduces dependencies and allows separate use of the modules. Still
+#               there should be some initialization/configuration code to connect the new library to the
+#               runtime implementation provided by the Application.
+R.cache.directorypath=./src/main/resources/cache/
+R.cache.locationscache.filename=LocationsCache.store
+R.cache.locationscache.activestate=true
+R.cache.locationscache.writedown=citadelupdate
