-[PROJECT] New branch to generate a new POC for login isolation and secure access to a common backend server. -New integration with the DataManagement and more secure isolation for the Model classes. -POC development for the new RSA secure session service.
Former-commit-id: 351b87339e82dfbf9f1daea3ad69282c3b91ae24

--- a/Neocom.MicroServices/settings.gradle
+++ b/Neocom.MicroServices/settings.gradle
@@ -1,7 +1,10 @@
 rootProject.name = 'NeoCom.MicroServices'
 
+include ':ESI.SwaggerApi'
+project(':ESI.SwaggerApi').projectDir = new File('D:\\Development\\Libraries Base\\NeoCom-DM\\NeoCom-DataMngmt Infinity\\ESI.SwaggerApi')
 include ':NeoCom.Model'
 project(':NeoCom.Model').projectDir = new File('D:\\Development\\Libraries Base\\NeoCom-DM\\NeoCom-DataMngmt Infinity\\NeoCom' +
         '.Model')
-include ':ESI.SwaggerApi'
-project(':ESI.SwaggerApi').projectDir = new File('D:\\Development\\Libraries Base\\NeoCom-DM\\NeoCom-DataMngmt Infinity\\ESI.SwaggerApi')
+include ':NeoCom.DataManagement'
+project(':NeoCom.DataManagement').projectDir = new File('D:\\Development\\Libraries Base\\NeoCom-DM\\NeoCom-DataMngmt ' +
+        'Infinity\\NeoCom.DataManagement')
