--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 
 group 'org.dimensinfin'
-version '0.11.0'
+version '0.12.0'
 archivesBaseName = 'NeoCom.MicroServices'
 
 sourceCompatibility = 1.8
@@ -45,9 +45,9 @@ build.dependsOn copyResources
 
 dependencies {
     // P R O J E C T    D E P E N D E N C I E S
-//    implementation project(path: ':CoreBaseLibrary')
-    implementation project(path: ':NeoCom.Model')
     implementation project(path: ':ESI.SwaggerApi')
+    implementation project(path: ':NeoCom.Model')
+    implementation project(path: ':NeoCom.DataManagement')
 
     // L O C A L    L I B R A R I E S
 
