-Added the encryption library to generate a unique and encrypted session for each login. -Recompiled the code adding a new RSA encryption to the session. Now the cleint and server interchange public keys to exchange the encrupted session identifier.
Former-commit-id: 3ce391271e71014157854225848dc5ebfc07a578

--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -35,12 +35,15 @@ sourceSets {
 //        attributes 'Start-Class': 'org.dimensinfin.eveonline.neocom.NeoComMicroServiceApplication'
 //    }
 //}
+
+//--- T A S K S
 task copyResources(type: Copy) {
-    from project(':NeoCom.Model').file('src/main/resources/properties')
-    into file('src/main/resources/properties')
+    from project(':NeoCom.Model').fileTree('src/main/resources/properties')
+    into file('src/main/resources/properties/')
+//    from project(':NeoCom.Model').file('src/main/resources/*.txt')
+//    into file('src/main/resources')
 }
-assemble.dependsOn copyResources
-build.dependsOn copyResources
+classes.dependsOn(copyResources)
 
 
 dependencies {
@@ -54,6 +57,7 @@ dependencies {
     // M O D U L E    D E P E N D E N C I E S
     // S P R I N G B O O T
     implementation 'org.springframework.boot:spring-boot-starter-web:1.3.5.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-security:1.3.5.RELEASE'
 //    implementation 'org.springframework.boot:spring-boot-starter-actuator:1.3.5.RELEASE'
 //    implementation 'org.springframework.boot:spring-boot-starter-cache:1.3.5.RELEASE'
 
