--- a/NeoCom.Incubation/package.json
+++ b/NeoCom.Incubation/package.json
@@ -25,6 +25,7 @@
     "angular-oauth2-oidc": "^3.1.4",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "cryptico": "^1.0.2",
     "font-awesome": "^4.7.0",
     "ng-drag-drop": "^4.0.0",
     "ng2-inline-editor": "^0.1.1-alpha.20",
