-Replacing old Toast by a new A ngular 5 implementation. -Added a new Pilot dashboard to the new multiuser project called Infinity. -Starting to upgrade the PilotController to adapt to the new authorization flow. I need to check the request comes from an authorized session. -Removed seed data because it is now irrelevant.
Former-commit-id: 2dcbee0678b2e1667ebece9f0b5c4f3fc7a5228a

--- a/NeoCom.Incubation/src/tsconfig.app.json
+++ b/NeoCom.Incubation/src/tsconfig.app.json
@@ -7,8 +7,9 @@
     "types": ["node"],
     "baseUrl": "./",
     "paths": {
-      "src/*": ["./src/*"],
-      "modules/*": ["./src/modules/*"]
+      "src/*": ["src/*"],
+      "app/*": ["src/app/*"],
+      "modules/*": ["src/modules/*"]
     }
   },
   "exclude": [
