--- a/NeoCom.Incubation/package.json
+++ b/NeoCom.Incubation/package.json
@@ -24,11 +24,12 @@
     "angular-encryption-service": "^0.1.0",
     "angular-font-awesome": "^3.1.2",
     "angular-oauth2-oidc": "^3.1.4",
+    "angular5-toaster": "^1.0.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "cryptico": "^1.0.2",
     "font-awesome": "^4.7.0",
-    "ng-drag-drop": "^4.0.0",
+    "ng-drag-drop": "^4.0.1",
     "ng2-inline-editor": "^0.1.1-alpha.20",
     "ng2-web-cryptography": "0.0.3",
     "rxjs": "^5.5.6",
