--- a/NeoCom.Incubation/tsconfig.json
+++ b/NeoCom.Incubation/tsconfig.json
@@ -17,8 +17,8 @@
     ],
     "baseUrl": "./",
     "paths": {
-      "src/*": ["./src/*"],
-      "modules/*": ["./src/modules/*"]
+      "src/*": ["src/*"],
+      "modules/*": ["src/modules/*"]
     }
   },
   "exclude": [
