-Completed the build task to copy resources. -[BUG] Corrected the birthday date formatting bug. -Completed the access to the PilotV2, the CorporationV1 and the AllianceV1. -Upgraded some of the test units. Still pending work on that side.
Former-commit-id: d5c225fe163d5bc1a97bd2eb1bb12d08f7b729e0

--- a/Neocom.MicroServices/build.gradle
+++ b/Neocom.MicroServices/build.gradle
@@ -37,25 +37,27 @@ sourceSets {
 //}
 
 //--- T A S K S
-task copyResources(type: Copy) {
-    // NeoCom.Model Properties
-    from project(':NeoCom.Model').fileTree('src/main/resources/properties')
-    into file('src/main/resources/properties/')
-    // NeoCom.Model Files
-    from project(':NeoCom.Model').file('src/main/resources/ESINetworkScopes.Singularity.txt')
-    into file('src/main/resources/ESINetworkScopes.Singularity.txt')
-
-    // NeoCom.DataManagement Properties
-    from project(':NeoCom.DataManagement').fileTree('src/main/resources/properties')
-    into file('src/main/resources/properties/')
-    // NeoCom.DataManagement SDE files
-    from project(':NeoCom.DataManagement').fileTree('src/main/resources/sdecontents')
-    into file('src/main/resources/sdecontents/')
-    from project(':NeoCom.DataManagement').fileTree('src/main/resources/yaml')
-    into file('src/main/resources/yaml/')
+task cleanUpResources(type: Delete) {
+    delete 'src/main/resources/sdecontents'
+    delete 'src/main/resources/yaml'
 }
-classes.dependsOn(copyResources)
-
+task copyResources(type: Copy) {
+    copy {
+        // NeoCom.Model Properties
+        from project(':NeoCom.Model').file('src/main/resources')
+        into file('src/main/resources')
+        include 'properties/**'
+//        include 'ESINetworkScopes.Singularity.txt'
+    }
+    copy {
+        from project(':NeoCom.DataManagement').file('src/main/resources')
+        into file('src/main/resources')
+        include 'properties/**'
+        include 'sdecontents/**'
+        include 'yaml/**'
+    }
+}
+//copyResources.dependsOn(cleanUpResources)
 
 dependencies {
     // P R O J E C T    D E P E N D E N C I E S
